# openrouter-proxy-ui

./: .gitignore  1. Install the dependencies using uv  2. Run the application  4. Format code  CPU_OPTIMIZATION_PLAN.md  Makefile  README.md  example-request.sh  generate_icon.sh  install.command  main.spec  proxy_interceptor.spec  pyproject.toml
.junie/: guidelines.md
.roo/: mcp.json
.trae/rules/: project_rules.md
assets/: icon.icns  or-proxy.icns
docs/: ICON_GENERATOR_README.md  features.md  tasks.md
generated_icons/: or-proxy.icns
proxy_interceptor/: __init__.py  cheatsheet_widget.py  config_widget.py  error_utils.py  layout_config.py  main.py  main_window.py  mock_data.py  model_selection_widget.py  model_tracking_widget.py  models.py  proxy_server.py  request_details_widget.py  request_list_widget.py  styles.py
tests/: test_main_window.py
