[project]
name = "proxy-interceptor"
version = "0.1.0"
description = "A PyQt6 application for intercepting and displaying HTTP requests"
requires-python = ">=3.11"
dependencies = [
    "PyQt6>=6.5.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
    "ruff>=0.12.9",
    "python-dotenv>=1.1.1",
]

[project.scripts]
proxy-interceptor = "proxy_interceptor.main:main"

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.format]
quote-style = "double"

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]
